# video_semantic_search

./: .gitignore
backend/: Dockerfile  go.mod  go.sum  gqlgen.yml  server.go
backend/graph/: generated.go  resolver.go  schema.graphqls  schema.resolvers.go  txt.txt
backend/graph/model/: models_gen.go
backend/internal/kafka/: consumer.go  producer.go
backend/internal/mlpb/: ml.pb.go  ml_grpc.pb.go
backend/internal/storage/: db.go  s3.go
backend/internal/worker/: processor.go
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/delete/: route.ts
frontend/src/app/api/graphql/: route.ts
infrastructure/: .env.production.example  docker-compose.yml
kubernetes/: configmap.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml
kubernetes/backend/: deployment.yaml  service.yaml
kubernetes/frontend/: deployment.yaml  ingress.yaml
kubernetes/gpu-tunnel/: deployment.yaml  service.yaml
kubernetes/postgres/: statefulset.yaml
kubernetes/redpanda/: statefulset.yaml
ml-infrastructure/: README.md  main.py  pyproject.toml  requirements.txt  serve_embeddings.py  serve_emotion.py  serve_transcription.py
ml-infrastructure/audio/: pyproject.toml  start_all.sh  stop_all.sh
ml-infrastructure/general/: .gitignore  README.md  download_vad.py  nohup.out  pyproject.toml  requirements.txt  serve_vision.py  start_all.sh  stop_all.sh
ml-infrastructure/kubernetes/: vllm-servicemonitor.yaml
ml-infrastructure/mlpb/: ml_pb2.py  ml_pb2_grpc.py
proto/: ml.proto
(+3 files in other folders)
