[project]
name = "ml-infrastructure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "python-multipart>=0.0.28",
    "torch==2.8.0", # Explicitly pin to 2.11.0
    "torchaudio==2.8.0",
    "uvicorn>=0.46.0",
    "whisperx",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
